--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-bin/*
-obj/*
-.vs/*
+.idea/
+.vs/
+.git/
+
+/bin/
+/obj/
+
 /libs/
+/PublishOutput/
+/temp/
+
+/assets/ffmpeg_core/
+/assets/magick/
+/assets/naudio/
